--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -18,11 +18,7 @@ spec:
           ports:
             - containerPort: 5000
           env:
-            - name: MONGO_HOST
-              value: mongo-cluster-ip-service
-            - name: MONGO_PORT
-              value: '27017'
             - name: MONGODB_URL
-              value: mongodb://mongo-cluster-ip-service:27017/ninostyle-docker
+              value: mongodb://mongo-cluster-ip-service:27017/ninostyle-doc
             - name: JWT_SECRET
               value: thisismynewcourse
