Updated cerificate, issuer and ingress files

--- a/k8s/certificate.yaml
+++ b/k8s/certificate.yaml
@@ -1,9 +1,9 @@
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
-  name: ninostyle-tls
+  name: ninostyle-ml-tls
 spec:
-  secretName: ninostyle
+  secretName: ninostyle-ml
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
