--- a/k8s/issuer.yaml
+++ b/k8s/issuer.yaml
@@ -1,4 +1,4 @@
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: certmanager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
@@ -8,4 +8,8 @@ spec:
     email: 'osuolale49@gmail.com'
     privateKeySecretRef:
       name: letsencrypt-prod
-    http01: {}
+    solvers:
+      - selector: {}
+        http01:
+          ingress:
+            class: nginx
