--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,8 +5,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
 spec:
   tls:
     - hosts:
@@ -26,13 +26,13 @@ spec:
               serviceName: server-cluster-ip-service
               servicePort: 5000
     - host: www.ninostyle.ml
-    http:
-      paths:
-        - path: /?(.*)
-          backend:
-            serviceName: client-cluster-ip-service
-            servicePort: 3000
-        - path: /api/?(.*)
-          backend:
-            serviceName: server-cluster-ip-service
-            servicePort: 5000
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
