--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -15,7 +15,7 @@ spec:
       secretName: ninostyle-ml
   rules:
     - host: ninostyle.ml
-    - http:
+      http:
         paths:
           - path: /?(.*)
             backend:
